<resources>
    <string name="app_name">App_Ecosense</string>
    <string name="titol">ECOSENSE</string>
    <string name="iniciarSessio">Iniciar Sessió</string>
    <string name="slogan">Perquè gestionar, significa estalviar</string>
    <string name="crearC">Crear compte</string>
    <string name="titolNom">Adreça electrònica</string>
    <string name="textNom">Insereix el teu nom:</string>
    <string name="insereixcontra">Insereix contrassenya</string>
    <string name="contrassenyaHint">**********</string>
    <string name="email">Email</string>
    <string name="emailInserir">Insereix el teu email</string>
    <string name="cancel">Cancel.lar</string>
    <string name="restablirC">Restablir</string>
    <string name="restablir">Restablir contrassenya</string>
    <string name="oblidaC">Has oblidat la contrassenya?</string>
    <string name="novacontras">Nova contrassenya:</string>
    <string name="nom">Nom:</string>
    <string name="cognom">Cognoms:</string>
    <string name="adrecaelec">Adreça electrònica</string>
    <string name="contrassenya">Contrasenya:</string>
    <string name="conficontrassenya">Confirmar contrasenya:</string>
    <string name="titolInici">Les meves plantes</string>
    <string name="sobreNosaltres">Sobre nosaltres</string>
    <string name="dispositius">Dispositius</string>
    <string name="contacte">Contacte</string>
    <string name="search">Search</string>
    <string name="nd_open">Obrir menú</string>
    <string name="nd_close">Tancar menú</string>
    <string name="enviar_correu">Envieu-nos un correu electrònic</string>
    <string name="destinatari">Destinatari</string>
    <string name="assumpte">Assumpte</string>
    <string name="value">Value</string>
    <string name="cos">Cos</string>
    <string name="missatgecontacte">Ens posarem en contacte el més aviat possible</string>
    <string name="enviar">Enviar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saluts">Benvingut!</string>
    <string name="els_nostres_sensors">Els nostres sensors</string>
    <string name="qui_som">Qui som?</string>
    <string name="qui_som_texte">
        A ECOSENSE, som una companyia compromesa amb la sostenibilitat i la tecnologia aplicada al benestar del medi ambient. Ens especialitzem en el disseny i venda de sensors intel·ligents que permeten monitorar l’estat de les plantes en temps real, afavorint una gestió eficient del reg i dels recursos naturals.
        Amb les nostres solucions, ajudem tant a particulars com a professionals a optimitzar el consum d’aigua, millorar la salut de les plantes i reduir l’impacte ecològic.
    </string>
    <string name="qui_som_texte_2">Creiem en un futur verd on la tecnologia i la natura treballen plegades per protegir el planeta.</string>
    <string name="veure_mes_dispositius">Veure més a Dispositius</string>
    <string name="els_nostres_sensors_texte">Els sensors mesuren la humitat, la llum i la temperatura per ajudar-te a cuidar millor les plantes. Amb aquestes dades, pots regar només quan cal, estalviant aigua i afavorint un ús eficient dels recursos.</string>
    <string name="els_nostres_sensors_texte2">Són fàcils d’instal·lar i es connecten amb el teu mòbil, permetent un control intel·ligent i ecològic, tant a casa com en jardins o horts.</string>
    <string name="detalls_dis">Més detalls</string>
    <string name="detalls_dis_texte">Els sensors són dissenyats per ser resistents a les condicions ambientals extremes, com ara la pluja o l`exposició al sol, garantint una llarga durabilitat i un rendiment fiable a llarg termini.</string>
    <string name="afegir_planta">Afegir Planta</string>
    <string name="nom_planta">Nom de la planta</string>
    <string name="ubicacio">Ubicació</string>
    <string name="sensor_id">ID del sensor</string>
    <string name="imagen_url">URL de la imagen</string>
    <string name="modificarPlanta">Modificar Planta</string>
    <string name="afegirImatge">Afegir imatge</string>
    <string name="canviarNom">Canviar nom</string>
    <string name="guardar">Guardar</string>
    <string name="eliminarP">Eliminar Plantaa</string>
    <string name="infoG">Informació general</string>
    <string name="infoGeneral">Vigileu amb els canvis sobtats de llum, temperatura o reg. Cada planta té necessitats específiques: comproveu el substrat abans de regar i assegureu-vos que reben la llum adequada. Observar-les regularment us ajudarà a detectar problemes a temps.</string>
    <string name="infoEliminar">Abans d´eliminar qualsevol informació o dada, pensa en les possibles conseqüències. Sigues conscient i actua amb responsabilitat, ja que podries afectar processos importants o perdre informació valuosa.</string>
    <string name="ubicacio_sensor">El sensor ID es troba integrat dins del mateix sensor, identificant-lo de manera única.</string>
    <string name="importancia">Saber la humitat de la planta ens ajuda a determinar si rep la quantitat d´aigua que necessita. Un excés o defecte d´humitat pot afectar-ne el creixement i la salut. Gràcies a aquesta informació, podem ajustar el reg per mantenir-la en condicions òptimes.</string>
    <string name="cuidar">Les plantes són éssers vius que depenen de nosaltres per sobreviure i créixer sanes. Una atenció adequada, com el reg correcte i la llum suficient, en millora la qualitat de vida. A més, una planta sana contribueix a un entorn més agradable i harmoniós.</string>
    <string name="cuidar2">Les plantes purifiquen l´aire, redueixen l´estrès i contribueixen a la biodiversitat. Tenir cura d´elles no només les beneficia, sinó que també ajuda a preservar l´equilibri natural. Cada petita acció compta per a un futur més verd i sostenible.</string>
</resources>