<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".comptes.CrearCompte">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fons" />

    <ImageView
        android:id="@+id/bg"
        android:layout_margin="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logoblanco"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/titol"
        android:fontFamily="@font/aladin_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titol"
        android:layout_marginTop="170dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/green_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:background="@drawable/green_bg"
        android:padding="20dp"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/titol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/textNom"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cognom"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/cognom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:padding="8dp"
            android:hint="@string/cognom"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adrecaelec"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/adrecaelec"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contrassenya"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/contra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/contrassenyaHint"
            android:inputType="textPassword"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conficontrassenya"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/confirmarc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/contrassenyaHint"
            android:inputType="textPassword"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inici"
        app:layout_constraintTop_toBottomOf="@id/formContainer"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="@drawable/green_bg"
        android:padding="10dp"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cc"
            android:background="@drawable/verd_botons_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/crearC"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="24dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/iniciarSessio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/iniciarSessio"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>