<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".comptes.RecuperarContrassenya">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fons" />

    <ImageView
        android:id="@+id/bg"
        android:layout_margin="40dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logoblanco"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/titol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titol"
        android:layout_marginTop="250dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/green_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titol2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restablir"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/green_100"
        app:layout_constraintTop_toBottomOf="@id/titol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@drawable/green_bg"
        android:padding="20dp"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/titol2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/emailInserir"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/buttonContainer"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            app:justifyContent="space_around">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelarBtn"
                android:layout_width="150dp"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:background="@drawable/verd_botons_bg" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/restablirBtn"
                android:layout_width="150dp"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:text="@string/restablirC"
                android:textSize="12sp"
                android:background="@drawable/green_bg" />
        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>