<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_300"
    tools:context=".start.MainActivity">
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_gravity="start"
        android:scaleType="centerCrop"
        android:src="@drawable/fons"
        tools:layout_editor_absoluteX="-149dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/bg"
        android:layout_margin="70dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logoblanco"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/titol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin_regular"
        android:text="@string/titol"
        android:layout_marginTop="250dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/green_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/green_100"
        android:textAlignment="center"
        android:fontFamily="@font/aladin_regular"
        android:text="@string/slogan"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="30dp"
        android:text="@string/iniciarSessio"
        android:textSize="18sp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/white_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cc"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="30dp"
        android:text="@string/crearC"
        android:textSize="18sp"
        android:background="@drawable/white_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/startBtn"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>